<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="photo"
            type="com.sopian.imageapp.core.domain.model.Photo" />

        <variable
            name="info"
            type="com.sopian.imageapp.core.domain.model.Info" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_height="@dimen/app_bar_height"
            android:theme="@style/Theme.Unsplash.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/iv_detail_image"
                    app:imageFromUrl="@{photo.urls.regular}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_of_photo_detail" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="500dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:imageFromUrl="@{photo.user.profileImage.medium}"
                    android:layout_margin="@dimen/margin_normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_baseline_favorite_24" />

                <TextView
                    android:id="@+id/textView"
                    style="?attr/textAppearanceSubtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_extra_small"
                    android:text="@{`@` + photo.user.username}"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
                    app:layout_constraintStart_toEndOf="@+id/circleImageView"
                    app:layout_constraintTop_toTopOf="@+id/circleImageView"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="username" />

                <TextView
                    android:id="@+id/textView2"
                    style="?attr/textAppearanceSubtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_extra_small"
                    app:formattedText="@{photo.created_at}"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
                    app:layout_constraintStart_toEndOf="@+id/circleImageView"
                    app:layout_constraintTop_toTopOf="@+id/circleImageView"
                    app:layout_constraintVertical_bias="1.0"
                    tools:text="27, Nov 2020" />

                <TextView
                    android:id="@+id/description"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    app:goneUnless="@{photo.description != null}"
                    app:text="@{photo.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageView"
                    tools:text="Description" />

                <ImageButton
                    android:id="@+id/download"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:src="@drawable/ic_baseline_arrow_downward_24"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/circleImageView"
                    android:contentDescription="@string/image_of_button_download" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:drawablePadding="@dimen/margin_extra_small"
                    android:text="@string/views"
                    app:drawableLeftCompat="@drawable/ic_baseline_remove_red_eye_24"
                    app:drawableStartCompat="@drawable/ic_baseline_remove_red_eye_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:formattedNumber="@{info.views}"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    tools:text="399" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_extra_small"
                    android:text="@string/downloads"
                    app:drawableLeftCompat="@drawable/ic_baseline_arrow_downward_24"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:formattedNumber="@{info.downloads}"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    tools:text="3,999,000" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:text="@string/camera_make"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView11"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    android:layout_marginEnd="@dimen/margin_extra_small"
                    app:appendDashIfNUll="@{info.exif.make}"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    tools:text="SONY" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_model"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView13"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    app:appendDashIfNUll="@{info.exif.model}"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    tools:text="ILCE-6000" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:text="@string/focal_length"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView15"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    app:appendDashIfNUll="@{info.exif.focal_length + `mm`}"
                    app:layout_constraintStart_toStartOf="@+id/textView12"
                    app:layout_constraintTop_toBottomOf="@+id/textView12"
                    tools:text="30.0`mm`" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/aperture"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView17"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    app:appendDashIfNUll="@{`ƒ/` + info.exif.aperture}"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/textView14"
                    tools:text="ƒ/1.4" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:text="@string/shutter_speed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" />

                <TextView
                    android:id="@+id/textView19"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    app:appendDashIfNUll="@{info.exif.exposure_time + `s`}"
                    app:layout_constraintStart_toStartOf="@+id/textView16"
                    app:layout_constraintTop_toBottomOf="@+id/textView16"
                    tools:text="1/200s" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/iso"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <TextView
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    app:appendDashIfNUll="@{info.exif.iso}"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/textView18"
                    tools:text="250" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:text="@string/dimensions"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />

                <TextView
                    android:id="@+id/textView22"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    app:appendDashIfNUll="@{info.dimensions}"
                    app:layout_constraintStart_toStartOf="@+id/textView20"
                    app:layout_constraintTop_toBottomOf="@+id/textView20"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="1080 x 720" />

                <com.mapbox.mapboxsdk.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView22" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/image_of_button_favorite"
            app:isFavorite="@{photo.favorite}"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_not_favorite_white" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>